Ajout fonction pour choix pays et banque

--- a/proprietesJeu.properties
+++ b/proprietesJeu.properties
@@ -3,5 +3,5 @@ prop1 = test
 prop2 = une propriete pleine de texte
 prop3 = 42
 nbJoueurs = 3
-nbTourJoueurs = 5
-nbCompteSuspects = 20
+nbActionsTour = 2
+nbComptesSuspects = 20
